# openqasm-spec-ja

./: .gitignore  DISCLAIMER.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
source/: bibliography.bib  conf.py  intro.rst
source/grammar/: index.rst
source/language/: classical.rst  comments.rst  delays.rst  directives.rst  gates.rst  index.rst  insts.rst  openpulse.rst  pulses.rst  scope.rst  standard_library.rst  subroutines.rst  types.rst
