[project]
name = "openqasm-spec-ja"
version = "0.1.0"
description = "OpenQASM 3.0 Specification Japanese Translation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Sphinx>=7.0.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
authors = [
    {name = "orangekame3", email = "orangekame3@gmail.com"}
]
license = {text = "Apache-2.0"}
keywords = ["quantum", "openqasm", "documentation", "japanese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Documentation :: Sphinx",
]

[project.urls]
Homepage = "https://github.com/orangekame3/openqasm-spec-ja"
Repository = "https://github.com/orangekame3/openqasm-spec-ja"
Documentation = "https://openqasm-spec-ja.readthedocs.io/"
"Bug Tracker" = "https://github.com/orangekame3/openqasm-spec-ja/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.sphinx]
source-dir = "source"
build-dir = "build"
